fixed dark mode issue

--- a/styles/scss/_darkmode.scss
+++ b/styles/scss/_darkmode.scss
@@ -14,7 +14,7 @@
         color: #000;
     }
 
-    .about, .skills, .content, .contactMethods ul li, footer {
+    .about, .skills, .content, .contactMethods ul li, footer, #calendar {
         background-color: $fontFill;
     }
 
